clients/apps/web/src/styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    @apply text-gray-900;
  }

  html.dark {
    @apply text-gray-200;
  }
}

@media (prefers-color-scheme: light) {
  img[src$='#gh-dark-mode-only'],
  img[src$='#only-dark'] {
    display: none;
  }
}

/* Dark mode */

#polar-bg-gradient {
  font-size: 12px;
  font-family: sans-serif;
  --token-de3bbe02-efef-4dfe-a362-f6d5715de8ac: rgb(209, 223, 242);
  --token-58f5305f-65b1-4075-86f8-f9ee69a3e917: #fefdf9;
  --token-ec1cd941-31b3-45e1-ad4c-e85325e1620f: rgb(70, 103, 202);
  --token-8c1bdbf3-9c17-469a-9d0d-53b702bebc4c: rgb(114, 115, 116);
  --token-6d46fd94-9194-4d41-ac1f-b299fb0439bf: #303f78;
  --token-7ea07a0f-ce97-4e5e-8a32-a0ab2739dff4: rgb(70, 103, 202);
  --token-60634839-9e8c-4342-af21-7bacb8b78d0e: rgb(165, 194, 235);
  --framer-aspect-ratio-supported: auto;
  box-sizing: border-box;
  -webkit-font-smoothing: inherit;
  background: radial-gradient(
    50% 50% at 50% 50%,
    #fcf0ec 0%,
    rgba(252, 240, 236, 0) 100%
  );
  flex: none;
  height: 1284px;
  left: calc(22.883597883597908% - 1344px / 2);
  mix-blend-mode: multiply;
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  top: -405px;
  width: 1344px;
  z-index: 10;
}

@media (max-width: 420px) {
  #polar-bg-gradient {
    left: calc(22.883597883597908% - 500px);
    height: 140vh;
    width: 200vw;
  }
}

/* chadcn/ui */

@layer base {
  :root {
    --background: 231 10% 98%;
    --foreground: 233 10% 10%;

    --card: 0 0% 100%;
    --card-foreground: 233 10% 10%;

    --popover: 0 0% 100%;
    --popover-foreground: 224 71.4% 4.1%;

    --primary: 217 100% 50%;
    --primary-foreground: 210 20% 98%;

    --secondary: 220 14.3% 95.9%;
    --secondary-foreground: 220.9 39.3% 11%;

    --muted: 220 14.3% 95.9%;
    --muted-foreground: 233 10% 40%;

    --accent: 217 100% 50%;
    --accent-foreground: 0 0% 100%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 75% 60%;

    --border: 231 10% 94%;
    --input: 231 10% 94%;
    --ring: 231 10% 94%;
    --radius: 0.6rem;
  }

  .dark {
    --background: 233 8% 12%;
    --foreground: 233 10% 36%;

    --card: 233 8% 12%;
    --card-foreground: 231 17% 100%;

    --popover: 233 8% 11%;
    --popover-foreground: 231 17% 85%;

    --primary: 217 100% 50%;
    --primary-foreground: 231 17% 100%;

    --secondary: 233 8% 5%;
    --secondary-foreground: 231 17% 100%;

    --muted: 233 8% 13%;
    --muted-foreground: 233 10% 36%;

    --accent: 217 100% 50%;
    --accent-foreground: 210 20% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 75% 60%;

    --border: 233 8% 14%;
    --input: 233 8% 14%;
    --ring: 233 8% 14%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply text-foreground;
  }
}

// Shiki

pre.shiki {
  overflow: auto;
}

@media (prefers-color-scheme: dark) {
  .shiki,
  .shiki span {
    color: var(--shiki-dark) !important;
    /* Optional, if you also want font styles */
    font-style: var(--shiki-dark-font-style) !important;
    font-weight: var(--shiki-dark-font-weight) !important;
    text-decoration: var(--shiki-dark-text-decoration) !important;
  }
}

